Issue #173: Fixes image display on narrow viewports, thanks to @Soviut.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -167,7 +167,7 @@ figure img,
 .insert-image img {
   margin: 0 auto;
   display: block;
-  max-width: 700px;
+  max-width: min(700px, 100%);
   height: auto;
 }
 
